--- a/apps/web/src/styles/bom.module.scss
+++ b/apps/web/src/styles/bom.module.scss
@@ -7,6 +7,7 @@
   // padding: 10px 10px 10px 10px;
   // padding-left: 10px;
 }
+
 .addDataIcon {
   padding-top: 20px;
   padding-left: 50px;
@@ -16,6 +17,7 @@
   gap: 10px;
   align-items: center;
 }
+
 .iconContent {
   // background-color: #667085;
   display: flex;
@@ -208,12 +210,14 @@
 
   th,
   td {
-    padding: 8px 8px 8px 18px; /* Adjust padding */
+    padding: 8px 8px 8px 18px;
+    /* Adjust padding */
     text-align: left;
     font-weight: 500;
     font-size: 12px;
     max-width: 100px;
-    border: none; /* Remove borders */
+    border: none;
+    /* Remove borders */
     border-bottom: 0.1px solid #f0f0f0;
   }
 
@@ -229,6 +233,17 @@
         font-weight: 700;
       }
     }
+  }
+
+  tbody {
+    tr:nth-child(odd) {
+    }
+    tr:nth-child(even) {
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
+  .td_desc {
+    min-width: 55.5rem;
   }
 }
 
