--- a/apps/web/src/styles/expenseApprove.module.scss
+++ b/apps/web/src/styles/expenseApprove.module.scss
@@ -132,6 +132,18 @@
       }
     }
   }
+
+  tbody {
+    tr:nth-child(odd) {}
+
+    tr:nth-child(even) {
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
+
+  .td_desc {
+    min-width: 55.5rem;
+  }
 }
 
 .tableIcon {
@@ -143,8 +155,8 @@
 
 .button {
   display: flex;
-  flex-direction: column ;
-  align-items: flex-end ;
+  flex-direction: column;
+  align-items: flex-end;
   padding: 0% 3% 1.5% 0%;
 }
 
@@ -322,6 +334,7 @@
   justify-content: flex-end;
   padding: 10px 10px 0px 0px;
 }
+
 .propCancel {
   display: flex;
   flex-direction: row;
