--- a/apps/web/src/styles/home.module.scss
+++ b/apps/web/src/styles/home.module.scss
@@ -310,6 +310,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .projectPayment {
   color: red;
   opacity: 0.7;
@@ -380,6 +381,18 @@
   tr:hover {
     /* Add hover styles if needed */
   }
+
+  tbody {
+    tr:nth-child(odd) {}
+
+    tr:nth-child(even) {
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
+
+  .td_desc {
+    min-width: 55.5rem;
+  }
 }
 
 .centerCard {
@@ -409,8 +422,10 @@
 }
 
 .dashedLine {
-  border-left: 0.5px dashed #000; /* Adjust the color and thickness as needed */
+  border-left: 0.5px dashed #000;
+  /* Adjust the color and thickness as needed */
 }
+
 .headTitle {
   text-transform: uppercase;
 }
