--- a/apps/web/src/styles/masterdata.module.scss
+++ b/apps/web/src/styles/masterdata.module.scss
@@ -214,19 +214,21 @@
     border-bottom: 0.1px solid #f0f0f0;
   }
 
-  // td {
-  //   border-bottom: 0.1px solid #f0f0f0;
-  //   // border-bottom :0px, 0px, 1px, 0px
-  // }
-
-  // thead {
-  //   tr {
-  //     th {
-  //       color: #667085;
-  //       font-weight: 700;
-  //     }
-  //   }
-  // }
+  tbody {
+    tr:nth-child(odd) {
+      // background: red;
+    }
+    //even keyword
+    tr:nth-child(even) {
+      // opacity: .7;
+      // color: black;
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
+ 
+  .td_desc {
+    min-width: 55.5rem;
+  }
 
   thead {
     tr {
