--- a/apps/web/src/styles/popupexpanses.module.scss
+++ b/apps/web/src/styles/popupexpanses.module.scss
@@ -150,6 +150,21 @@
     }
   }
 
+  tbody {
+    tr:nth-child(odd) {
+      // background: red;
+    }
+    //even keyword
+    tr:nth-child(even) {
+      // opacity: .7;
+      // color: black;
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
+ 
+  .td_desc {
+    min-width: 55.5rem;
+  }
   td {
     align-items: center;
     text-align: center;
