--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -205,6 +205,21 @@
   gap: 12px;
   border-collapse: collapse;
 
+  tbody {
+    tr:nth-child(odd) {
+      // background: red;
+    }
+    //even keyword
+    tr:nth-child(even) {
+      // opacity: .7;
+      // color: black;
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
+ 
+  .td_desc {
+    min-width: 55.5rem;
+  }
   th,
   td {
     padding: 10px 10px 10px 24px;
@@ -279,6 +294,21 @@
         text-transform: uppercase;
       }
     }
+  }
+  tbody {
+    tr:nth-child(odd) {
+      // background: red;
+    }
+    //even keyword
+    tr:nth-child(even) {
+      // opacity: .7;
+      // color: black;
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
+ 
+  .td_desc {
+    min-width: 55.5rem;
   }
 
   td:hover,
