--- a/apps/web/src/styles/projectBomConfig.module.scss
+++ b/apps/web/src/styles/projectBomConfig.module.scss
@@ -214,6 +214,21 @@
       font-size: var(--tableData-fontSize);
       border-bottom: 0.1px solid #f0f0f0;
     }
+    tbody {
+      tr:nth-child(odd) {
+        // background: red;
+      }
+      //even keyword
+      tr:nth-child(even) {
+        // opacity: .7;
+        // color: black;
+        background-color: var(--tableRow-backgroundColor);
+      }
+    }
+   
+    .td_desc {
+      min-width: 55.5rem;
+    }
   
     td {
       border-bottom: 0.1px solid #f0f0f0;
@@ -266,6 +281,21 @@
       border-bottom: 0.1px solid #f0f0f0;
       // border-bottom :0px, 0px, 1px, 0px
     }
+    tbody {
+      tr:nth-child(odd) {
+        // background: red;
+      }
+      //even keyword
+      tr:nth-child(even) {
+        // opacity: .7;
+        // color: black;
+        background-color: var(--tableRow-backgroundColor);
+      }
+    }
+   
+    .td_desc {
+      min-width: 55.5rem;
+    }
   
     thead {
       tr {
@@ -316,6 +346,21 @@
           font-weight: 600;
         }
       }
+    }
+    tbody {
+      tr:nth-child(odd) {
+        // background: red;
+      }
+      //even keyword
+      tr:nth-child(even) {
+        // opacity: .7;
+        // color: black;
+        background-color: var(--tableRow-backgroundColor);
+      }
+    }
+   
+    .td_desc {
+      min-width: 55.5rem;
     }
   
     td {
