--- a/apps/web/src/styles/projectInventory.module.scss
+++ b/apps/web/src/styles/projectInventory.module.scss
@@ -76,6 +76,22 @@ th,
     border-bottom: 0.1px solid #f0f0f0;
   }
 
+  tbody {
+    tr:nth-child(odd) {
+      // background: red;
+    }
+    //even keyword
+    tr:nth-child(even) {
+      // opacity: .7;
+      // color: black;
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
+ 
+  .td_desc {
+    min-width: 55.5rem;
+  }
+
   td {
     border-bottom: 0.1px solid #f0f0f0;
     // border-bottom :0px, 0px, 1px, 0px
