--- a/apps/web/src/styles/newStyles/indentRequest.module.scss
+++ b/apps/web/src/styles/newStyles/indentRequest.module.scss
@@ -1,52 +1,67 @@
 .tableContainerIndent {
-    width: 95%;
-    margin: 2rem auto;
+  width: 95%;
+  margin: 2rem auto;
 
-    &::-webkit-scrollbar {
-        width: 0px;
-        background: transparent;
-    }
+  &::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+  }
 }
 
 .scrollable_table {
-    width: 100%;
-    height: 100%;
-    padding: 10px 10px;
-    gap: 12px;
-    border-collapse: collapse;
+  width: 100%;
+  height: 100%;
+  padding: 10px 10px;
+  gap: 12px;
+  border-collapse: collapse;
 
-    th,
-    td {
-        padding: 5px 5px 5px 24px;      
-        text-align: left;
+  th,
+  td {
+    padding: 5px 5px 5px 24px;
+    text-align: left;
+    border: none;
+    font-weight: var(--tableData-fontWeight);
+    font-size: var(--tableData-fontSize);
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  thead {
+    tr {
+      th {
+        padding: 10px 10px 10px 24px;
+        color: var(--tableHeader-fontColor);
+        background-color: var(--tableHeader-backgroundColor);
         border: none;
-        font-weight: var(--tableData-fontWeight);
-        font-size: var(--tableData-fontSize);
-        border-bottom: 0.1px solid #f0f0f0;
+        font-size: var(--tableHeader-fontSize);
+        font-weight: var(--tableHeader-fontWeight);
+        text-transform: var(--tableHeader-textTransform);
+      }
     }
+  }
 
-    td {
-        border-bottom: 0.1px solid #f0f0f0; 
+  td:hover,
+  tr:hover {
+    background-color: rgb(239, 239, 239);
+  }
+  tbody {
+    tr:nth-child(odd) {
+      // background: red;
     }
+    //even keyword
+    tr:nth-child(even) {
+      // opacity: .7;
+      // color: black;
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
 
-    thead {
-        tr {
-            th {
-                padding: 10px 10px 10px 24px;
-                color: var(--tableHeader-fontColor);
-                background-color: var(--tableHeader-backgroundColor);
-                border: none;
-                font-size: var(--tableHeader-fontSize);
-                font-weight: var(--tableHeader-fontWeight);
-                text-transform: var(--tableHeader-textTransform);
-            }
-        }
-    }
-
-    td:hover,
-    tr:hover {
-        background-color: rgb(239, 239, 239);
-    }
+  .td_desc {
+    min-width: 55.5rem;
+  }
 }
 
 // .tableHeading {
@@ -54,8 +69,8 @@
 // }
 
 .buttons {
-    display: flex;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    justify-content: flex-start;
+  display: flex;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  justify-content: flex-start;
 }
