--- a/apps/web/src/styles/newStyles/projectIndentList.module.scss
+++ b/apps/web/src/styles/newStyles/projectIndentList.module.scss
@@ -195,6 +195,21 @@
   tr:hover {
     /* Add hover styles if needed */
   }
+  tbody {
+    tr:nth-child(odd) {
+      // background: red;
+    }
+    //even keyword
+    tr:nth-child(even) {
+      // opacity: .7;
+      // color: black;
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
+
+  .td_desc {
+    min-width: 55.5rem;
+  }
 }
 
 .table_container {
