--- a/apps/web/src/styles/newStyles/purchaseOrderItemsView.module.scss
+++ b/apps/web/src/styles/newStyles/purchaseOrderItemsView.module.scss
@@ -1,191 +1,204 @@
 .container {
-    width: 100%;
-    padding-bottom: 10px;
-    padding-top: 10px;
-    // background-color: #6941c6;
+  width: 100%;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  // background-color: #6941c6;
 }
 .sub_header {
-    height: 10vh;
-    display: flex;
+  height: 10vh;
+  display: flex;
 }
 
 .logo {
-    font-weight: bold;
-    font-size: 16px;
-    color: var(--secondary-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 5%;
-    cursor: pointer;
+  font-weight: bold;
+  font-size: 16px;
+  color: var(--secondary-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 5%;
+  cursor: pointer;
 }
-  
-  .vertical {
-    position: relative;
-  }
-  
-  .verticalLine::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 1px;
-    /* Adjust the width of the line */
-    background-color: #7d7d7d;
-    /* Adjust the color as needed */
-    height: 100%;
-  }
 
-  .description {
-    font-size: small;
-  }
+.vertical {
+  position: relative;
+}
 
-  .orderDetails{
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    padding-top: 15px;
-    padding-left: 10px;
-  }
+.verticalLine::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 1px;
+  /* Adjust the width of the line */
+  background-color: #7d7d7d;
+  /* Adjust the color as needed */
+  height: 100%;
+}
 
-  .leftOrderDetail{
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-  }
-  .rightOrderDetail{
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-  }
+.description {
+  font-size: small;
+}
+
+.orderDetails {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  padding-top: 15px;
+  padding-left: 10px;
+}
+
+.leftOrderDetail {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.rightOrderDetail {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
 
 .dividerStyle {
-    border-bottom: 1px solid #7d7d7d;
-    padding-bottom: 5px;
-} 
+  border-bottom: 1px solid #7d7d7d;
+  padding-bottom: 5px;
+}
 
 .tableContainer {
-    padding: 20px 40px 0px 40px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    // width:0%
-  }
-  
+  padding: 20px 40px 0px 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  // width:0%
+}
 
 .scrollable_table {
-    width: 100%;
-    height: 100%;
-    padding: 10px 10px;
-    /* Adjust padding */
-    gap: 12px;
-    border-collapse: collapse;
-  
-    th,
-    td {
-      padding: 10px 10px 10px 24px;
-      text-align: left;
-      font-weight: var(--tableData-fontWeight);
-      font-size: var(--tableData-fontSize);    
-      border: none;
-      border-bottom: 0.1px solid #f0f0f0;
-    }
-  
-    td {
-      border-bottom: 0.1px solid #f0f0f0;
-      // border-bottom :0px, 0px, 1px, 0px
-    }
-  
-  
-    thead {
-      tr {
-        th {
-          padding: 10px 10px 10px 24px;
-          color: var(--tableHeader-fontColor);
-          font-size: var(--tableHeader-fontSize);
-          font-weight: var(--tableHeader-fontWeight);
-          text-transform: var(--tableHeader-textTransform);
-          background-color: var(--tableHeader-backgroundColor);
-          border: none;
-        }
+  width: 100%;
+  height: 100%;
+  padding: 10px 10px;
+  /* Adjust padding */
+  gap: 12px;
+  border-collapse: collapse;
+
+  th,
+  td {
+    padding: 10px 10px 10px 24px;
+    text-align: left;
+    font-weight: var(--tableData-fontWeight);
+    font-size: var(--tableData-fontSize);
+    border: none;
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+    // border-bottom :0px, 0px, 1px, 0px
+  }
+
+  thead {
+    tr {
+      th {
+        padding: 10px 10px 10px 24px;
+        color: var(--tableHeader-fontColor);
+        font-size: var(--tableHeader-fontSize);
+        font-weight: var(--tableHeader-fontWeight);
+        text-transform: var(--tableHeader-textTransform);
+        background-color: var(--tableHeader-backgroundColor);
+        border: none;
       }
     }
-  
-    td:hover,
-    tr:hover {
-      /* Add hover styles if needed */
+  }
+
+  td:hover,
+  tr:hover {
+    /* Add hover styles if needed */
+  }
+  tbody {
+    tr:nth-child(odd) {
+      // background: red;
+    }
+    //even keyword
+    tr:nth-child(even) {
+      // opacity: .7;
+      // color: black;
+      background-color: var(--tableRow-backgroundColor);
     }
   }
 
-  .topHeader{
-    display: flex;
-    flex-direction: row;
-    padding: 6px 0px 0px 15px;
-    gap: 8px;
+  .td_desc {
+    min-width: 55.5rem;
   }
+}
 
-  .leftOrderDetail{
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-  }
-  .rightOrderDetail{
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-  }
-  .secondData{
-    background-color:white;
-    padding: 10px
-  }
-  .vendorSiteDetails{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    // background-color:red;
-  }
-  .vendorDetails{
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    // background-color: blue;
-  }
-  .leftVendorDetail{
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-  }
-  .rightVendorDetail{
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-  }
-  .siteDetail{
-    // background-color: yellowgreen;   
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
-    background-color: white;
-  }
-  .leftSiteDetail{
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-  }
-  .rightSiteDetail{
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-  }
-  .headingData{
-    text-align: center;
-    padding: 15px;
-  }
-  .allDatas{
-    // background-color: green;
-    // padding: 0px 0px 20px 0px
-  }
+.topHeader {
+  display: flex;
+  flex-direction: row;
+  padding: 6px 0px 0px 15px;
+  gap: 8px;
+}
 
-  .dashedLine {
-    border-left: 0.5px dashed #7d7d7d;
-  }
+.leftOrderDetail {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.rightOrderDetail {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.secondData {
+  background-color: white;
+  padding: 10px;
+}
+.vendorSiteDetails {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  // background-color:red;
+}
+.vendorDetails {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  // background-color: blue;
+}
+.leftVendorDetail {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.rightVendorDetail {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.siteDetail {
+  // background-color: yellowgreen;
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  background-color: white;
+}
+.leftSiteDetail {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.rightSiteDetail {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.headingData {
+  text-align: center;
+  padding: 15px;
+}
+.allDatas {
+  // background-color: green;
+  // padding: 0px 0px 20px 0px
+}
+
+.dashedLine {
+  border-left: 0.5px dashed #7d7d7d;
+}
