--- a/apps/web/src/styles/stockOutWardView.module.scss
+++ b/apps/web/src/styles/stockOutWardView.module.scss
@@ -1,86 +1,100 @@
-.title{
-    padding: 15px 15px 0px 15px;
-    display: flex;
-    justify-content: space-between;
+.title {
+  padding: 15px 15px 0px 15px;
+  display: flex;
+  justify-content: space-between;
 }
-.cardContent{
-    padding: 10px 10px 10px 10px;
-    width:65%;
-}
-
-.buttonField{
-    display: flex;
-    justify-content: flex-end;
+.cardContent {
+  padding: 10px 10px 10px 10px;
+  width: 65%;
 }
 
-.screen{
-    // display: flex;
-    // justify-content: center;
+.buttonField {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.screen {
+  // display: flex;
+  // justify-content: center;
 }
 
 .dataRows {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 
-    padding-top: 10px;
-    // justify-content: center;
+  padding-top: 10px;
+  // justify-content: center;
 }
 
-.leftData{
-    font-weight: bold;
-    width: 250px;
+.leftData {
+  font-weight: bold;
+  width: 250px;
 }
-.rightData{
-    margin-left: 200px;
+.rightData {
+  margin-left: 200px;
 }
 .dividerStyle {
-    border-bottom: 1px solid black;
-  }
+  border-bottom: 1px solid black;
+}
 .siteList {
-    list-style: none;
-    display: inline;
+  list-style: none;
+  display: inline;
 }
 
 .scrollable_table {
-    width: 100%;
-    height: 100%;
-    padding: 10px 10px; /* Adjust padding */
-    gap: 12px;
-    border-collapse: collapse;
-  
-    th,
-    td {
-      padding: 10px 10px 10px 24px; /* Adjust padding */
-      text-align: left;
-      font-weight: var(--tableData-fontWeight);
-      font-size: var(--tableData-fontSize);
-      border: none; /* Remove borders */
-      border-bottom: 0.1px solid #f0f0f0;
-    }
-  
-    td {
-      border-bottom: 0.1px solid #f0f0f0;
-    }
-  
-    thead {
-      tr {
-        th {
-          padding: 10px 10px 10px 24px;
-          color: var(--tableHeader-fontColor);
-          font-size: var(--tableHeader-fontSize);
-          font-weight: var(--tableHeader-fontWeight);
-          text-transform: var(--tableHeader-textTransform);    
-          background-color: var(--tableHeader-backgroundColor);
-          border: none;
-        }
+  width: 100%;
+  height: 100%;
+  padding: 10px 10px; /* Adjust padding */
+  gap: 12px;
+  border-collapse: collapse;
+
+  th,
+  td {
+    padding: 10px 10px 10px 24px; /* Adjust padding */
+    text-align: left;
+    font-weight: var(--tableData-fontWeight);
+    font-size: var(--tableData-fontSize);
+    border: none; /* Remove borders */
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  thead {
+    tr {
+      th {
+        padding: 10px 10px 10px 24px;
+        color: var(--tableHeader-fontColor);
+        font-size: var(--tableHeader-fontSize);
+        font-weight: var(--tableHeader-fontWeight);
+        text-transform: var(--tableHeader-textTransform);
+        background-color: var(--tableHeader-backgroundColor);
+        border: none;
       }
     }
-  
-    .status {
-      background-color: #ecfdf3;
-      padding: 6px;
-      border-radius: 50px;
-      color: #027a48;
-    }
-  
   }
+
+  .status {
+    background-color: #ecfdf3;
+    padding: 6px;
+    border-radius: 50px;
+    color: #027a48;
+  }
+  tbody {
+    tr:nth-child(odd) {
+      // background: red;
+    }
+    //even keyword
+    tr:nth-child(even) {
+      // opacity: .7;
+      // color: black;
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
+
+  .td_desc {
+    min-width: 55.5rem;
+  }
+}
