--- a/apps/web/src/styles/stockOutwardList.module.scss
+++ b/apps/web/src/styles/stockOutwardList.module.scss
@@ -68,7 +68,7 @@
         border: none;
         font-size: var(--tableHeader-fontSize);
         font-weight: var(--tableHeader-fontWeight);
-        text-transform: var(--tableHeader-textTransform);      
+        text-transform: var(--tableHeader-textTransform);
       }
     }
   }
@@ -79,7 +79,21 @@
     border-radius: 50px;
     color: #027a48;
   }
+  tbody {
+    tr:nth-child(odd) {
+      // background: red;
+    }
+    //even keyword
+    tr:nth-child(even) {
+      // opacity: .7;
+      // color: black;
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
 
+  .td_desc {
+    min-width: 55.5rem;
+  }
 }
 
 .resetButton:not([disabled]):hover {
@@ -129,7 +143,7 @@
 }
 
 .backButton {
-  padding: 0px 10px 0px 0px
+  padding: 0px 10px 0px 0px;
 }
 
 .approveButtons {
@@ -137,7 +151,7 @@
   flex-direction: row;
   justify-content: flex-end;
   gap: 10px;
-  padding: 10px 10px 0px 0px
+  padding: 10px 10px 0px 0px;
 }
 
 .emptyDataHandling {
