--- a/apps/web/src/styles/uom.module.scss
+++ b/apps/web/src/styles/uom.module.scss
@@ -1,344 +1,357 @@
 .buttonContainer {
-    display: flex;
-    justify-content: flex-end;
-    padding: 5px;
+  display: flex;
+  justify-content: flex-end;
+  padding: 5px;
+}
+
+.tableContainer {
+  padding: 4px 10px 5px 10px;
+  // height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.fields {
+  padding: 10px;
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+}
+
+.box {
+  position: relative;
+}
+
+.scrollable_table {
+  width: 100%;
+  height: 100%;
+  padding: 10px 10px;
+  /* Adjust padding */
+  gap: 12px;
+  border-collapse: collapse;
+
+  th,
+  td {
+    padding: 5px 10px 5px 24px; /* Adjust padding */
+    text-align: left;
+    // border: 0px 0px 1px;
+    font-weight: var(--tableData-fontWeight);
+    font-size: var(--tableData-fontSize);
+    border: none;
+    /* Remove borders */
+    border-bottom: 0.1px solid #f0f0f0;
   }
-  
-  .tableContainer {
-    padding: 4px 10px 5px 10px;
-    // height: 100vh;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+    // border-bottom :0px, 0px, 1px, 0px
   }
-  
-  .fields {
-    padding: 10px;
-    display: flex;
-    gap: 10px;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  
-  .container {
-    width: 100%;
-    height: 100vh;
-  }
-  
-  .box {
-    position: relative;
-  }
-  
-  .scrollable_table {
-    width: 100%;
-    height: 100%;
-    padding: 10px 10px;
-    /* Adjust padding */
-    gap: 12px;
-    border-collapse: collapse;
-  
-    th,
-    td {
-      padding: 5px 10px 5px 24px; /* Adjust padding */
-      text-align: left;
-      // border: 0px 0px 1px;
-      font-weight: var(--tableData-fontWeight);
-      font-size: var(--tableData-fontSize);
-      border: none;
-      /* Remove borders */
-      border-bottom: 0.1px solid #f0f0f0;
-    }
-  
-    td {
-      border-bottom: 0.1px solid #f0f0f0;
-      // border-bottom :0px, 0px, 1px, 0px
-    }
-  
-    thead {
-      tr {
-        th {
-          padding: 10px 10px 10px 24px;
-          color: var(--tableHeader-fontColor);
-          background-color: var(--tableHeader-backgroundColor);
-          font-size: var(--tableHeader-fontSize);
-          font-weight: var(--tableHeader-fontWeight);
-          text-transform: var(--tableHeader-textTransform);
-  
-          border: none;
-        }
+
+  thead {
+    tr {
+      th {
+        padding: 10px 10px 10px 24px;
+        color: var(--tableHeader-fontColor);
+        background-color: var(--tableHeader-backgroundColor);
+        font-size: var(--tableHeader-fontSize);
+        font-weight: var(--tableHeader-fontWeight);
+        text-transform: var(--tableHeader-textTransform);
+
+        border: none;
       }
     }
-  
-    td:hover,
-    tr:hover {
-      /* Add hover styles if needed */
+  }
+
+  td:hover,
+  tr:hover {
+    /* Add hover styles if needed */
+  }
+  tbody {
+    tr:nth-child(odd) {
+      // background: red;
+    }
+    //even keyword
+    tr:nth-child(even) {
+      // opacity: .7;
+      // color: black;
+      background-color: var(--tableRow-backgroundColor);
     }
   }
-  
-  .box::after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: #ccc;
-    position: absolute;
-    bottom: 20;
-    left: 10;
-  }
-  
-  .box:last-child::after {
-    display: none;
-  }
-  
-  .textContent {
-    padding: 10px 10px 0px 10px;
-  }
-  
-  .text {
-    padding: 10px 10px 0px 10px;
-    display: flex;
-    gap: 79%;
-  }
-  
-  .textStyle {
-    padding-left: 5px;
-    padding-top: 5px;
-  }
-  
-  .buttonStyle {
-    padding-left: 15px;
-  }
-  
-  .addButton {
-    padding-top: 20px;
-  }
-  
-  .content {
-    font-size: 0.7rem;
-  }
-  
-  .groupButton {
-    padding-top: 10px;
-    padding-right: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-  }
-  
-  .tablerow {
-    display: flex;
-    flex-direction: row;
-    column-gap: 15px;
-    cursor: pointer;
-  }
-  
-  .searchField {
-    padding: 10px 10px 0px 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 10px;
-  }
-  
-  .searchButton {
-    display: flex;
-    flex-direction: row;
-    flex-shrink: initial;
-  }
-  
-  .searchButton {
-    padding: 12px 20px 12px 20px;
-    border-radius: 8px;
-    border: 1px;
-    gap: 8px;
-    color: #6941c6;
-  }
-  
-  .searchButton:hover {
-    background-color: #7f56d9;
-    color: #ffffff;
-  }
-  
-  .resetButton [disabled] {
-    padding: 12px 20px 12px 20px;
-    border-radius: 8px;
-    border: 1px;
-    gap: 8px;
-    color: black;
-    background-color: #ccc;
-  }
-  
-  .resetButton:not([disabled]):hover {
-    background-color: #c4c4c6;
-    color: #ffffff;
-  }
-  
-  .inputFilter {
-    display: flex;
-    gap: 10px;
-    height: 40px;
-  }
-  
-  .pagination {
-    display: flex;
-    justify-content: end;
-  }
-  
-  .formContainer {
-    width: 350px;
-    // padding: 1px 20px 10px 20px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .formButton {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    gap: 10px;
-    padding: 10px 20px 10px 0px;
-  }
-  
-  .cancelButton:hover {
-    background-color: #c4c4c6;
-    color: #070707;
-  }
-  
-  .titleStyle {
-    padding: 10px 10px 1px 2op;
-  }
-  
-  .dividerStyle {
-    border-bottom: 1px solid #ccc;
-    padding: 5px 1px 0px 1px;
-  }
-  
-  .field {
-    padding: 5px 20px 5px 20px;
-  }
-  
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 16px;
-  }
-  
-  .closeButton {
-    background: none;
-    border: none;
-    cursor: pointer;
-    padding: 0;
-    outline: none;
-  }
-  
-  .popupContent {
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    width: 350px;
-  }
-  
-  .popupHeader {
-    display: flex;
-    flex-direction: row;
-    gap: 200px;
-  }
-  
-  .button {
-    display: flex;
-    gap: 20px;
-  }
-  
-  .textBox {
-    width: 30%;
-  }
-  
-  .topHeading {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding-bottom: 15px;
-    padding: 0px 10px 10px 10px;
-  }
-  
-  .heading {
-    display: flex;
-    flex-direction: row;
-    gap: 15px;
-    align-items: center;
-  }
-  
-  .subHeading {
-    display: flex;
-    flex-direction: row;
-    gap: 7px;
-    align-items: center;
-  }
-  
-  .spanContent {
-    font-weight: 400;
-  }
-  
-  .emptyButton {
-    margin-top: 25px;
-  }
-  
-  
-  .emptyDataHandling {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2px;
-    padding-top: 55px;
-  }
 
-  .contentGap {
-    padding: 10px;
+  .td_desc {
+    min-width: 55.5rem;
   }
-  
-  .textmin {
-    padding: 10px;
-    font-weight: 400;
-    font-size: 14px;
-  }
-  
-  .textmax {
-    font-weight: 700;
-    font-size: 16px;
-  }
-  
-  .topheader {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 10px 0px 10px 10px;
-    gap: 20px;
-  }
-  
-  .description {
-    font-size: 0.7rem;
-  }
-  
-  .title {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-  
-  .searchBar {
-    // padding-left: 10px;
-  }
+}
 
-  .searchFeild {
-    transform: translateY(20%);
-  }
-  
-  .filters {
-    display: flex;
-    gap: 20px;
-    padding: 21px 0px 0px 5px;
-  }
-  
+.box::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+  position: absolute;
+  bottom: 20;
+  left: 10;
+}
+
+.box:last-child::after {
+  display: none;
+}
+
+.textContent {
+  padding: 10px 10px 0px 10px;
+}
+
+.text {
+  padding: 10px 10px 0px 10px;
+  display: flex;
+  gap: 79%;
+}
+
+.textStyle {
+  padding-left: 5px;
+  padding-top: 5px;
+}
+
+.buttonStyle {
+  padding-left: 15px;
+}
+
+.addButton {
+  padding-top: 20px;
+}
+
+.content {
+  font-size: 0.7rem;
+}
+
+.groupButton {
+  padding-top: 10px;
+  padding-right: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+}
+
+.tablerow {
+  display: flex;
+  flex-direction: row;
+  column-gap: 15px;
+  cursor: pointer;
+}
+
+.searchField {
+  padding: 10px 10px 0px 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.searchButton {
+  display: flex;
+  flex-direction: row;
+  flex-shrink: initial;
+}
+
+.searchButton {
+  padding: 12px 20px 12px 20px;
+  border-radius: 8px;
+  border: 1px;
+  gap: 8px;
+  color: #6941c6;
+}
+
+.searchButton:hover {
+  background-color: #7f56d9;
+  color: #ffffff;
+}
+
+.resetButton [disabled] {
+  padding: 12px 20px 12px 20px;
+  border-radius: 8px;
+  border: 1px;
+  gap: 8px;
+  color: black;
+  background-color: #ccc;
+}
+
+.resetButton:not([disabled]):hover {
+  background-color: #c4c4c6;
+  color: #ffffff;
+}
+
+.inputFilter {
+  display: flex;
+  gap: 10px;
+  height: 40px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: end;
+}
+
+.formContainer {
+  width: 350px;
+  // padding: 1px 20px 10px 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.formButton {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 10px;
+  padding: 10px 20px 10px 0px;
+}
+
+.cancelButton:hover {
+  background-color: #c4c4c6;
+  color: #070707;
+}
+
+.titleStyle {
+  padding: 10px 10px 1px 2op;
+}
+
+.dividerStyle {
+  border-bottom: 1px solid #ccc;
+  padding: 5px 1px 0px 1px;
+}
+
+.field {
+  padding: 5px 20px 5px 20px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+}
+
+.closeButton {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  outline: none;
+}
+
+.popupContent {
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  width: 350px;
+}
+
+.popupHeader {
+  display: flex;
+  flex-direction: row;
+  gap: 200px;
+}
+
+.button {
+  display: flex;
+  gap: 20px;
+}
+
+.textBox {
+  width: 30%;
+}
+
+.topHeading {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 15px;
+  padding: 0px 10px 10px 10px;
+}
+
+.heading {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  align-items: center;
+}
+
+.subHeading {
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+  align-items: center;
+}
+
+.spanContent {
+  font-weight: 400;
+}
+
+.emptyButton {
+  margin-top: 25px;
+}
+
+.emptyDataHandling {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+  padding-top: 55px;
+}
+
+.contentGap {
+  padding: 10px;
+}
+
+.textmin {
+  padding: 10px;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.textmax {
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.topheader {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px 0px 10px 10px;
+  gap: 20px;
+}
+
+.description {
+  font-size: 0.7rem;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.searchBar {
+  // padding-left: 10px;
+}
+
+.searchFeild {
+  transform: translateY(20%);
+}
+
+.filters {
+  display: flex;
+  gap: 20px;
+  padding: 21px 0px 0px 5px;
+}
