--- a/apps/web/src/styles/vendor.module.scss
+++ b/apps/web/src/styles/vendor.module.scss
@@ -178,6 +178,21 @@
   tr:hover {
     /* Add hover styles if needed */
   }
+  tbody {
+    tr:nth-child(odd) {
+      // background: red;
+    }
+    //even keyword
+    tr:nth-child(even) {
+      // opacity: .7;
+      // color: black;
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
+
+  .td_desc {
+    min-width: 55.5rem;
+  }
 }
 
 .topHeading {
@@ -219,7 +234,7 @@
 
 .spanContent {
   font-weight: 400;
-} 
+}
 
 .textmin {
   padding: 10px;
