--- a/apps/web/src/styles/vendorDetailItemView.module.scss
+++ b/apps/web/src/styles/vendorDetailItemView.module.scss
@@ -1,64 +1,77 @@
-
 .dividerStyle {
-    border-bottom: 1px solid #ccc;
-    padding: 1px 1px 1px 1px;
-  }
-  .title{
-    padding: 0px 15px 0px 15px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-content: center;
-    align-items: center;
-    // background-color: aquamarine;
-    height: 45px;
+  border-bottom: 1px solid #ccc;
+  padding: 1px 1px 1px 1px;
+}
+.title {
+  padding: 0px 15px 0px 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  // background-color: aquamarine;
+  height: 45px;
 }
 
 .tableContainer {
-    padding: 15px 15px 0px 15px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    width:50%
-  }
-  .scrollable_table {
-    width: 100%;
-    height: 100%;
-    padding: 10px 10px;
+  padding: 15px 15px 0px 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 50%;
+}
+.scrollable_table {
+  width: 100%;
+  height: 100%;
+  padding: 10px 10px;
+  /* Adjust padding */
+  gap: 12px;
+  border-collapse: collapse;
+
+  th,
+  td {
+    padding: 10px 10px 10px 24px;
     /* Adjust padding */
-    gap: 12px;
-    border-collapse: collapse;
-  
-    th,
-    td {
-      padding: 10px 10px 10px 24px;
-      /* Adjust padding */
-      text-align: left;
-      font-weight: 500;
-      // border: 0px 0px 1px;
-      font-size: 12px;
-      border: none;
-      /* Remove borders */
-      border-bottom: 0.1px solid #f0f0f0;
-    }
-  
-    td {
-      border-bottom: 0.1px solid #f0f0f0;
-      // border-bottom :0px, 0px, 1px, 0px
-    }
-  
-    thead {
-      tr {
-        th {
-          color: #667085;
-          font-weight: 700;
-        }
+    text-align: left;
+    font-weight: 500;
+    // border: 0px 0px 1px;
+    font-size: 12px;
+    border: none;
+    /* Remove borders */
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+    // border-bottom :0px, 0px, 1px, 0px
+  }
+
+  thead {
+    tr {
+      th {
+        color: #667085;
+        font-weight: 700;
       }
     }
-  
-    td:hover,
-    tr:hover {
-      /* Add hover styles if needed */
+  }
+
+  td:hover,
+  tr:hover {
+    /* Add hover styles if needed */
+  }
+  tbody {
+    tr:nth-child(odd) {
+      // background: red;
+    }
+    //even keyword
+    tr:nth-child(even) {
+      // opacity: .7;
+      // color: black;
+      background-color: var(--tableRow-backgroundColor);
     }
   }
-  
+
+  .td_desc {
+    min-width: 55.5rem;
+  }
+}
