--- a/apps/web/src/styles/projectlist.module.scss
+++ b/apps/web/src/styles/projectlist.module.scss
@@ -7,7 +7,6 @@
   padding: 8px 10px 10px 10px;
   display: flex;
   flex-direction: column;
-  // justify-content: center;
 }
 
 .textStyle {
@@ -24,7 +23,6 @@
 
 .cardTextStyle {
   display: flex;
-  // justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 10px;
@@ -44,36 +42,38 @@
 }
 
 .searchButton {
-  display: flex;
-  flex-direction: row;
-  flex-shrink: initial;
-}
-
-.searchButton {
   padding: 12px 20px 12px 20px;
   border-radius: 8px;
-  border: 1px;
   gap: 8px;
   color: #6941c6;
+  background-color: transparent;
+  border: 1px solid #6941c6;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+
+  &:hover {
+    background-color: #7f56d9;
+    color: #ffffff;
+  }
 }
 
-.searchButton:hover {
-  background-color: #7f56d9;
-  color: #ffffff;
-}
-
-.resetButton [disabled] {
+.resetButton {
   padding: 12px 20px 12px 20px;
   border-radius: 8px;
-  border: 1px;
   gap: 8px;
   color: black;
   background-color: #ccc;
-}
+  cursor: not-allowed;
+  transition: background-color 0.3s, color 0.3s;
 
-.resetButton:not([disabled]):hover {
-  background-color: #c4c4c6;
-  color: #ffffff;
+  &:hover {
+    background-color: #ccc;
+    color: black;
+  }
+
+  &[disabled] {
+    cursor: not-allowed;
+  }
 }
 
 .inputFilter {
@@ -96,9 +96,7 @@
 
 .button {
   display: flex;
-  // gap: 20px;
   justify-content: center;
-  // align-items: center;
 }
 
 .pagination {
@@ -110,33 +108,26 @@
 /* Apply the scrollable_table class to your table element */
 .scrollable_table {
   width: 100%;
-  height: 100%;
-  padding: 10px 10px 10px 10px; /* Adjust padding */
+  padding: 10px 10px 10px 10px;
   gap: 12px;
   border-collapse: collapse;
 
   th,
   td {
-    padding: 5px 10px 5px 24px; /* Adjust padding */
+    padding: 5px 10px 5px 24px;
     text-align: left;
-    // border: 0px 0px 1px;
     font-weight: var(--tableData-fontWeight);
     font-size: var(--tableData-fontSize);
-    border: none; /* Remove borders */
+    border: none;
     border-bottom: 0.1px solid #f0f0f0;
   }
+
   tbody {
-    tr:nth-child(odd) {
-      // background: red;
-    }
-    //even keyword
     tr:nth-child(even) {
-      // opacity: .7;
-      // color: black;
       background-color: var(--tableRow-backgroundColor);
     }
   }
- 
+
   .td_desc {
     min-width: 55.5rem;
   }
@@ -158,6 +149,7 @@
       }
     }
   }
+
   td:hover,
   tr:hover {
     /* Add hover styles if needed */
@@ -170,6 +162,7 @@
   border-radius: 50px;
   color: #027a48;
 }
+
 .inprogressStatus {
   background-color: #fdf2fa;
   padding: 6px;
@@ -189,90 +182,81 @@
   flex-direction: row;
   align-items: center;
   column-gap: 10px;
-  // margin-right: 40px;
   cursor: pointer;
 }
 
 .tableContainer {
-  padding: 10px 10px 0px 10px;
-}
-
-.dashBoardcontainer {
-  padding: 2px;
-}
-
-.dashBoard {
-  height: 300px;
-}
-
-.card {
-  display: flex;
-  justify-content: center;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  width: 20%;
-  height: 20%;
-  border-radius: 10px;
-  padding: 10px;
-  margin: 10px;
-}
-
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-.graphCard {
-  display: flex;
-  justify-content: center;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  width: 51%;
-  column-gap: 50px;
-  border-radius: 20px;
-}
-
-.tableHeading {
-  // background-color: linear-gradient(0deg, #EAECF0, #EAECF0);
-  // linear-gradient(0deg, #FFFFFF, #FFFFFF);
-  color: linear-gradient(0deg, #eaecf0, #eaecf0);
-}
-
-.graphCard:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-.cardContainer {
-  padding: 15px 2px;
-}
-
-.cardDiv {
-  display: flex;
-
-  justify-content: space-evenly;
-
-  padding: 10px 0px 10px 5px;
-}
-
-.barCarddDiv {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
-  gap: 30px;
-}
-
-.chart {
+  // padding: 10px 10px 0px 10px;
   width: 100%;
-  padding: 20px 40px;
+  overflow-x: auto; 
 }
 
-.header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 10px;
-  padding: 20px 10px 0px 10px;
+/* Media Query for Mobile */
+/* Default styles for the table */
+.scrollable_table {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: auto;
+  border-collapse: collapse;
+
+  th,
+  td {
+    padding: 5px 10px 5px 24px;
+    text-align: left;
+    font-weight: var(--tableData-fontWeight);
+    font-size: var(--tableData-fontSize);
+    border: none;
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  tbody {
+    tr:nth-child(even) {
+      background-color: var(--tableRow-backgroundColor);
+    }
+  }
+
+  .td_desc {
+    min-width: 55.5rem;
+  }
+
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  thead {
+    tr {
+      th {
+        padding: 10px 10px 10px 24px;
+        color: var(--tableHeader-fontColor);
+        background-color: var(--tableHeader-backgroundColor);
+        border: none;
+        font-size: var(--tableHeader-fontSize);
+        font-weight: var(--tableHeader-fontWeight);
+        text-transform: var(--tableHeader-textTransform);
+      }
+    }
+  }
+
+  td:hover,
+  tr:hover {
+    /* Add hover styles if needed */
+  }
 }
 
-.firstHeader {
-  display: flex;
+/* Responsive Styles */
+@media (max-width: 767px) {
+  .scrollable_table th,
+  .scrollable_table td {
+    white-space: nowrap;
+  }
+}
+
+/* Additional Styles */
+.pagination {
+  justify-content: center;
+}
+
+.inputFilter1 {
   justify-content: flex-start;
-  gap: 10px;
 }
+
