--- a/apps/web/src/styles/newStyles/reportModule/purchasereport.module.scss
+++ b/apps/web/src/styles/newStyles/reportModule/purchasereport.module.scss
@@ -1,7 +1,27 @@
 .container {
+  background-color: rgb(227, 227, 227);
   display: flex;
-  flex-direction: column;
-  gap: 30px;
+  padding: 10px;
+  gap: 15px;
+}
+.sideMenu {
+  background-color: white;
+  padding: 20px;
+  width: 25%;
+}
+.menuHeading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.mainMenu {
+  background-color: white;
+  padding: 20px;
+  width: 75%;
+  height: 350px;
+  // overflow-y: scroll;
 }
 .stackChartContainer {
   width: 100%;
@@ -14,7 +34,29 @@
   grid-template-columns: 1fr 1fr;
   align-items: center;
 }
-
+.side_sideMenu {
+  padding-top: 2px;
+  ol {
+    list-style: none;
+    // margin: 0;
+    li {
+      padding: 12px;
+      cursor: pointer;
+      font-size: 14px;
+      &:hover {
+        background-color: #efefef;
+      }
+      border-radius: 5px;
+      &.selected {
+        background-color: #d5d9eb;
+        // padding: 8px, 12px, 8px, 12px;
+        color: var(--secondary-color);
+        // border-radius: 6px;
+        font-weight: 600;
+      }
+    }
+  }
+}
 .scrollable_table {
   padding: 10px 10px;
   gap: 12px;
